--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-movie",
+  "name": "movie",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +7,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.2",
+    "axios": "^1.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
-    "swiper": "^11.2.5",
+    "swiper": "^11.2.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
